<resources>
    <string name="app_name">PracticalTest02Var04</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Url address</string>
    <string name="client_port">Port</string>
    <string name="city">City</string>
    <string name="get_results">GET</string>
    <string name="information_type">Information Type</string>
    <string name="get_weather_forecast">Get Weather Forecast</string>
</resources>
